--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=admin
 spring.datasource.password=admin
 
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
