--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/vollmed_api
+spring.datasource.url=jdbc:mysql://localhost/backend_api
 spring.datasource.username=admin
 spring.datasource.password=admin
 
