--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,14 @@
 			<version>4.2.1</version>
 		</dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
+
+	</dependencies>
 
 
 	<build>
