--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,27 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/backend_api
-spring.datasource.username=admin
-spring.datasource.password=admin
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost/backend_api
+#spring.datasource.username=admin
+#spring.datasource.password=admin
+#
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
 
+
+
+# Configurações do PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_code_blog
+spring.datasource.username=postgres
+spring.datasource.password=2657827Vi
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configurações de Hibernante (opcional)
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
 api.security.token.secret=${JWT_SECRET:12345678}
+
+# Configuração do Pool de Conexão (opcional)
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
